# Openwnn-korean-custom

./: .gitignore  AndroidManifest.xml  PRIVACY.md  README.md  build.gradle  import-summary.txt
app/: Android.mk  Application.mk  CMakeLists.txt  build.gradle
app/debug/: output.json
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/db/: hanja.db
app/src/main/assets/words/: english.txt  korean-pos-chain.txt  korean-trails.txt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  triedictionary-lib.c  triedictionary-lib.cpp  triedictionary-lib.cpp___jb_old___  triedictionary-lib.h  triedictionary-lib.txt
app/src/main/res/drawable/: candidatebg_blue.xml  ic_launcher_eink_foreground.xml  ic_launcher_foreground.xml  key_qwerty_shift.xml  key_qwerty_space.xml  keybg_blue.xml  keybg_blue_bg.xml  keybg_blue_def.xml  keybg_blue_p.xml  keybg_blue_psftoff.xml  keybg_blue_psfton.xml  keybg_blue_sftoff.xml  keybg_blue_sfton.xml  keybg_dark.xml  keybg_dark_bg.xml  keybg_dark_def.xml  keybg_dark_enter.xml  keybg_dark_enter_def.xml  keybg_dark_enter_p.xml  keybg_dark_mod.xml  keybg_dark_mod_def.xml  keybg_dark_p.xml  keybg_dark_psftoff.xml  keybg_dark_psfton.xml  keybg_dark_sftoff.xml  keybg_dark_sfton.xml  keybg_eink.xml  keybg_eink_def.xml  keybg_eink_p.xml  keybg_eink_psftoff.xml  keybg_eink_psfton.xml  keybg_eink_sftoff.xml  keybg_eink_sfton.xml  keybg_flat.xml  keybg_flat_blue_bg.xml  keybg_flat_def.xml  keybg_flat_enter.xml  keybg_flat_enter_def.xml  keybg_flat_enter_p.xml  keybg_flat_sfton.xml  (+17 more)
app/src/main/res/layout/: auto_text_edit.xml  (+31 more)
(+393 files in other folders)
